# gp2026s-team11-project

./: .gitignore  CLAUDE.md  CMakeLists.txt
Results/: generate_psnr_graphs.py  generate_ref_image.py  psnr_results.csv
shaders/: shader_ray_tracing.fs
src/: camera.h  main.cpp  math_utils.h  mesh.h  model.h  opengl_utils.h  scene.cpp  scene.h  shader.h  texture.h
